# cli-enhanced

./: CHANGELOG.md  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: publish.yml  rust.yml
api/: Cargo.toml
api/src/: error.rs  lib.rs  retry.rs
api/src/resources/: audit.rs  bucket.rs  bucket_statistics.rs  comment.rs  dataset.rs  documents.rs  email.rs  entity_def.rs  integration.rs  label_def.rs  label_group.rs  mod.rs  project.rs  quota.rs  source.rs  statistics.rs  stream.rs  tenant_id.rs  user.rs  validation.rs
cli/: Cargo.toml  convert-comments.py  publish-binaries
cli/src/: args.rs  config.rs  main.rs  printer.rs  progress.rs  thousands.rs  utils.rs
cli/src/commands/: config.rs  delete.rs  mod.rs
cli/src/commands/create/: annotations.rs  bucket.rs  comments.rs  dataset.rs  emails.rs  integrations.rs  mod.rs  project.rs  quota.rs  source.rs  stream_exception.rs  streams.rs  user.rs
cli/src/commands/get/: audit_events.rs  buckets.rs  comments.rs  datasets.rs  emails.rs  integrations.rs  mod.rs  projects.rs  sources.rs  streams.rs  users.rs
cli/src/commands/parse/: emls.rs  mod.rs  msgs.rs
cli/src/commands/update/: dataset.rs  mod.rs  project.rs  source.rs  users.rs
cli/tests/: common.rs  test_buckets.rs  test_comments.rs  test_datasets.rs  test_projects.rs  test_sources.rs
cli/tests/samples/: audio.jsonl  basic.jsonl  duplicates.jsonl  labelling.jsonl  legacy_labelling.jsonl  many.jsonl  moon_forms.jsonl
scripts/: build  check  check-versions  publish  publish-install
